# fog_x

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  evaluation.sh  experiments.sh  mkdocs.yml  openx_to_vla.sh  pyproject.toml  requirements.txt  setup.py  vla_to_hdf5.sh
.github/: FUNDING.yml  rename_project.sh
.github/workflows/: lint.yml  main.yml  release.yml
benchmarking/: OLD_test_convert.py  PQ_Arrow_Loaders.ipynb  TFrecord.ipynb  arrow.py  convert_tf_hdf5.py  ffmpeg_loaders.py  hdf5.py  loaders.py  parquet.py  plot_notes.py  plotting_notes.py  pq_arrow_loaders.py  tf_record.py
benchmarking/misc/: fogx_notes.py  hdf5_loader.ipynb  tf_record.ipynb  tf_to_hdf5.py
benchmarking/plots/: plot_notes.py
benchmarks/: Visualization.ipynb  openx.py  openx_by_episode.py  openx_by_frame.py
design_doc/: planning_doc.md  sql_table_design.md  system_assumptions.md  timestamp_join.md
docs/: Reference.md  index.md  usage.md
docs/design_doc/: data_layout.md  planning_doc.md
examples/: Fog_RTX_Cloud_Demo.ipynb  Fog_X Demo.ipynb  Fog_X_Analytics_Demo.ipynb  Fog_X_Cloud_Demo.ipynb  debug_h5.py  fixing_failed_conversions.py  h5_loader.py  hello_world.py  openx_loader copy.py  openx_loader.py  rlds_to_lerobot.py  rtx.py  rtx_example.py  rtx_loader.py  summarize_dataset.py  tiger_picking_h5_conversion.py  tiger_picking_to_h5.py  vla_file_debugger.py  vla_loader.py  vla_to_h5.py
examples/Data_Storage_Benchmarking/: OLD_convert_tf.py  hdf5.py  parquet.py  tf_record.py
examples/analytics/: README.md  data_analytics_example.ipynb  dataset_organizer.py  (+1 more)
fog_rtx/: __init__.py  __main__.py  base.py  cli.py  dataset.py  episode.py  feature.py
fog_x/: DLdataset.py  VERSION  __init__.py  __main__.py  cli.py  dataset.py  episode.py  feature.py  trajectory.py  utils.py
tests/: test_base.py
(+45 files in other folders)
