[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fog_x"
version = "0.2.0"
dependencies = [
    "numpy",
    "pillow",
    "smart_open",
    "av",
    "requests",
    "h5py",
]
description = "An Efficient and Scalable Data Collection and Management Framework For Robotics Learning"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["robotics", "data", "management", "collection", "framework", "learning"]

[project.optional-dependencies]
hf = ["datasets"]
rtx = ["tensorflow", "tensorflow_datasets", "envlogger"]
aws = ["boto3"]
torch = ["torch"]
all = ["datasets", "tensorflow", "tensorflow_datasets", "envlogger", "boto3", "smart_open", "torch", "torchvision"]

[project.urls]
homepage = "https://github.com/BerkeleyAutomation/fog_x/"